--- a/css/home.css
+++ b/css/home.css
@@ -1,9 +1,10 @@
 @charset "utf-8";
-@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600|Roboto:300,400,500');
+@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Roboto:300,400,500');
 body{
     margin: 0;
     padding: 0;
     background-color:rgb(255,255,255);
+    color: rgb(30,30,30);
     font-family: Roboto;
     font-weight: 400;
     align-items: center;
@@ -25,6 +26,9 @@ a {
     text-decoration: none;
     color: rgb(251,118,96);
     cursor: pointer;
+}
+b{
+    font-weight: 600;
 }
 nav{
     left: 0;
@@ -86,6 +90,13 @@ nav.scroll{
     font-size: 16px;
     font-weight: 400;
     font-family: Poppins;
+    -webkit-transition: font-weight 0.2s ease;
+    -moz-transition: font-weight 0.2s ease;
+    -o-transition: font-weight 0.2s ease;
+    transition: font-weight 0.2s ease;
+}
+.navbttns:hover,.navbttns:focus,.navbttns:active{
+    font-weight:600;
 }
 #navinsta, #navface{
     width: 24px;
@@ -97,6 +108,10 @@ nav.scroll{
     -webkit-mask-position: center;
     -webkit-mask-repeat: no-repeat;
     -webkit-mask-size: contain;
+    -webkit-transition: background-color 0.2s ease;
+    -moz-transition: background-color 0.2s ease;
+    -o-transition: background-color 0.2s ease;
+    transition: background-color 0.2s ease;
 }
 #navinsta{
     margin-left: 60px;
@@ -109,6 +124,9 @@ nav.scroll{
     mask-image: url(img/faceic.svg);
     -webkit-mask-image: url(img/faceic.svg);
 }
+#navinsta:hover, #navface:hover,#navinsta:focus, #navface:focus,#navinsta:active, #navface:active{
+    background-color: rgb(255,160,100);
+}
 .navlangs{
     box-sizing: border-box;
     padding-left: 20px;
@@ -116,6 +134,13 @@ nav.scroll{
     font-size: 16px;
     font-weight: 300;
     font-family: Poppins;
+    -webkit-transition: font-weight 0.2s ease;
+    -moz-transition: font-weight 0.2s ease;
+    -o-transition: font-weight 0.2s ease;
+    transition: font-weight 0.2s ease;
+}
+.navlangs:hover,.navlangs:focus,.navlangs:active{
+    font-weight: 400;
 }
 #head_wrap{
     height: 100vh;
@@ -237,7 +262,7 @@ nav.scroll{
     background-repeat: no-repeat;
     background-size: contain;
 }
-.playgate:hover{
+.playgate:hover,.playgate:focus,.playgate:active{
     opacity: 1;
 }
 .main_play{
@@ -274,28 +299,22 @@ nav.scroll{
 }
 .closex{
     position: absolute;
-    margin: 40px;
+    margin: 10px 40px 10px 40px;
     top: 0;
     right: 0;
-    background-color: rgba(255,255,255,0.6);
-    min-height: 50px;
-    min-width: 50px;
-    mask-image: url(img/closex.svg);
-    mask-position: center;
-    mask-repeat: no-repeat;
-    mask-size: contain;
-    -webkit-mask-image: url(img/closex.svg);
-    -webkit-mask-position: center;
-    -webkit-mask-repeat: no-repeat;
-    -webkit-mask-size: contain;
-    -webkit-transition: background-color 0.2s ease;
-    -moz-transition: background-color 0.2s ease;
-    -o-transition: background-color 0.2s ease;
-    transition: background-color 0.2s ease;
+    color: rgba(255,255,255,0.6);
+    font-family: poppins;
+    font-size: 60px;
+    font-weight: 400;
+    -webkit-transition: color 0.2s ease;
+    -moz-transition: color 0.2s ease;
+    -o-transition: color 0.2s ease;
+    transition: color 0.2s ease;
 }
-.closex:hover{
-    background-color: rgba(255,255,255,1);
+.closex:hover,.closex:focus,.closex:active{
+    color: rgba(255,255,255,1);
 }
+
 #hmain_cont{
     width: 1200px;
     display: flex;
@@ -304,7 +323,7 @@ nav.scroll{
     -webkit-flex-direction: column;
 }
 .hmain_secs{
-    padding: 60px 0px 60px 0px;
+    padding: 60px 0px 0px 0px;
     margin-bottom: 60px;
     width: 100%;
     box-sizing: border-box;
@@ -315,15 +334,30 @@ nav.scroll{
     -webkit-flex-direction: column;
     -webkit-justify-content: space-between;
 }
-.hmain_blkt{
+.hmain_blkt1, .hmain_blkt2,.hmain_blkt3,.hmain_blkt4{
     width: 100%;
     display: flex;
     justify-content: space-between;
-    flex-direction: row;
     display: -webkit-flex;
+    flex-direction: row;
     -webkit-flex-direction: row;
 }
-.hmain_blk1, .hmain_blk2{
+.hmain_blkt1{
+    margin-bottom: 60px;
+}
+.hmain_blkt2{
+    margin-bottom: 60px;
+    flex-direction: column;
+    -webkit-flex-direction: column;
+}
+.hmain_blkt3{
+    padding: 70px 100px 0px 140px;
+    box-sizing: border-box;
+}
+.hmain_blkt4{
+    justify-content: center;
+}
+.hmain_blk1, .hmain_blk2, .hmain_blk3{
     width: 50%;
     box-sizing: border-box;
     display: flex;
@@ -331,13 +365,16 @@ nav.scroll{
     display: -webkit-flex;
     -webkit-flex-direction: column;
 }
-
 .hmain_blk2{
     justify-content: flex-end;
     padding: 0px 120px 100px 180px;
 }
+.hmain_blk3{
+    justify-content: flex-end;
+    padding: 0px 200px 0px 180px;
+}
 .hmain_titl, .hmain_titl2{
-    font-weight: 700;
+    font-weight: 600;
     font-family: poppins;
     font-size: 40px;
     margin: 100px 0px 10px 140px;
@@ -345,20 +382,36 @@ nav.scroll{
 .hmain_titl2{
     margin-bottom: 80px;
 }
+.hmain_stitl{
+    font-weight: 400;
+    font-family: poppins;
+    font-size: 30px;
+    margin: 40px 0px 10px 300px;
+    line-height: 36px;
+}
 .hmain_btxt1, .hmain_btxt2{
-    font-weight: 700;
+    font-weight: 600;
     font-family: poppins;
     font-size: 20px;
 }
 .hmain_btxt1{
     margin: 0px 0px 0px 300px;
 }
-.hmain_stitl{
-    font-weight: 700;
+.hmain_stxt1,.hmain_stxt2{
+    font-weight: 600;
     font-family: poppins;
-    color: rgb(251,118,96);
     font-size: 30px;
     margin: 0px 0px 0px 300px;
+}
+.hmain_stxt2{
+    color: rgb(251,118,96);
+    -webkit-transition: font-weight 0.2s ease;
+    -moz-transition: font-weight 0.2s ease;
+    -o-transition: font-weight 0.2s ease;
+    transition: font-weight 0.2s ease;
+}
+.hmain_stxt2:hover,.hmain_stxt2:focus,.hmain_stxt2:active{
+    font-weight: 700;
 }
 .hmain_txt{
     font-weight: 400;
@@ -366,24 +419,91 @@ nav.scroll{
     font-size: 14px;
     margin: 0px 0px 20px 300px;
 }
-#hmain_simg{
-    margin-left: 40px;
-    margin-top: 100px;
-    width: 500px;
-    height: 600px;
-    background-image: url(img/img1.jpg);
+#hmain_simg1, #hmain_simg2, #hmain_simg3{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
 }
+#hmain_simg1, #hmain_simg2{
+    margin-left: 40px;
+    width: 500px;
+    height: 540px;
+}
+#hmain_simg1{
+    margin-top: 100px;
+    background-image: url(img/img1.jpg);
+}
+#hmain_simg2{
+    background-image: url(img/img3.jpg);
+}
+#hmain_simg3{
+    margin:0px 0px 0px 300px ;
+    height: 500px;
+    width: 540px;
+    background-image: url(img/img4.jpg)
+}
+.hbuylink{
+    font-weight: 600;
+    font-family: poppins;
+    font-size: 20px;
+    color: rgb(251,118,96);
+    align-self: flex-end;
+    -webkit-transition: font-weight 0.2s ease;
+    -moz-transition: font-weight 0.2s ease;
+    -o-transition: font-weight 0.2s ease;
+    transition: font-weight 0.2s ease;
+}
+.hbuylink:hover,.hbuylink:active,.hbuylink:focus{
+    font-weight: 700;
+}
+.hmain_ablk{
+    margin-left: 20px;
+    display: flex;
+    flex-direction: column;
+    display: -webkit-flex;
+    -webkit-flex-direction: column;
+}
+.hmain_apics{
+    margin-bottom: 10px;
+    width: 240px;
+    height:240px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.hmain_adate,.hmain_atitl,.hmain_attxt{
+    font-family: poppins;
+    font-weight: 600;
+}
+.hmain_adate{
+    margin:40px 0px 0px 20px;
+    color: rgb(255,255,255);
+    font-size: 20px;
+    z-index: 5;
+    position: absolute;
+}
+.hmain_atitl{
+    font-size: 18px;
+    color: rgb(251,118,96);
+    margin-bottom: 8px;
+}
+.hmain_attxt{
+    font-size: 14px;
+}
 .hmoreico{
     height: 30px;
     width: 30px;
+    font-family: poppins;
+    font-weight: 400;
+    font-size: 50px;
     align-self: flex-end;
-    background-image: url(img/moreico.svg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    -webkit-transition: font-weight 0.2s ease;
+    -moz-transition: font-weight 0.2s ease;
+    -o-transition: font-weight 0.2s ease;
+    transition: font-weight 0.2s ease;
+}
+.hmoreico:hover,.hmoreico:focus,.hmoreico:active {
+    font-weight: 600;
 }
 #foot{
     height: 100px;
