--- a/css/sobre.css
+++ b/css/sobre.css
@@ -77,6 +77,10 @@ nav{
     -webkit-flex-direction: column;
     justify-content: center;
     -webkit-justify-content: center;
+    align-content: center;
+    align-items: center;
+    -webkit-align-content: center;
+    -webkit-align-items: center;
 }
 
 /* Next & previous buttons */
