--- a/css/home.css
+++ b/css/home.css
@@ -385,17 +385,14 @@ nav.scroll{
     -webkit-justify-content: flex-end;
     padding: 0px 200px 0px 180px;
 }
-.hmain_titl{
+.hmain_titl,.hmain_titl2{
     font-weight: 600;
     font-family: poppins;
     font-size: 40px;
     margin: 100px 0px 10px 140px;
 }
 .hmain_titl2{
-    font-weight: 600;
-    font-family: poppins;
-    font-size: 40px;
-    margin-bottom: 80px;
+    margin-bottom: 70px;
 }
 .hmain_stitl{
     font-weight: 400;
@@ -526,7 +523,7 @@ nav.scroll{
 .hsocialbox{
     height: 400px;
     width: 350px;
-    padding: 0px 20px 0px 20px;
+    margin: 80px 20px 80px 20px;
     align-items: center;
     display: flex;
     flex-direction: column;
