--- a/css/proj.css
+++ b/css/proj.css
@@ -3,30 +3,53 @@
     height: 5000px;
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
     display: -webkit-flex;
     -webkit-flex-direction: column;
+    -webkit-align-items: flex-end;
 }
 #hprojshirt{
     height: 100vh;
     min-height: 600px;
     width: 100%;
     background-color: rgba(30,30,30,0.5);
-    justify-content: center;
     left: 0;
-    align-items: center;
     z-index: 10;
     position: absolute;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+    -webkit-justify-content: center;
+    -webkit-align-items: center;
+}
+#hps_stamp{
+    width:1200px;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+    -webkit-align-items: center;
+    -webkit-justify-content: flex-end;
+}
+#hstamp_logo{
+    width: 940px;
+    z-index: 10;
     display: flex;
     display: -webkit-flex;
-    flex-direction: row;
-    -webkit-flex-direction: row;
+    flex-direction: column;
+    -webkit-flex-direction: column;
     box-sizing: border-box;
 }
 #proj_cont{
-    width: 100%;
+    width: 940px;
     margin-top: 80px;
-    justify-content: center;
-    align-items: center;
     z-index: 10;
     display: flex;
     display: -webkit-flex;
@@ -91,7 +114,7 @@ mh{
     -o-transition: font-weight 0.2s ease;
     transition: font-weight .2s ease;
 }
-.ap:hover,.ap:focus,.ap:active{
+.ap:hover,.ap:active{
     font-weight: 600;
 }
 .ap.active{
