--- a/css/home.css
+++ b/css/home.css
@@ -68,9 +68,9 @@ nav.scroll{
     padding: 20px 20px 10px 20px;
 }
 #navlogo{
-    height: 80px;
+    height: 70px;
     width: 80px;
-    background-image: url(img/Asset%206.png);
+    background-image: url(img/nav_logo.svg);
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
