--- a/css/proj.css
+++ b/css/proj.css
@@ -38,108 +38,13 @@
     -webkit-justify-content: flex-end;
 }
 #hstamp_logo{
-    width: 940px;
-    z-index: 10;
-    display: flex;
-    display: -webkit-flex;
-    flex-direction: column;
-    -webkit-flex-direction: column;
-    box-sizing: border-box;
-}
-#proj_cont{
     width: 1000px;
-    margin-top: 80px;
     z-index: 10;
     display: flex;
     display: -webkit-flex;
     flex-direction: column;
     -webkit-flex-direction: column;
     box-sizing: border-box;
-}
-.projbox{
-    margin-bottom: 40px;
-    display: flex;
-    display: -webkit-flex;
-    flex-direction: column;
-    -webkit-flex-direction: column; 
-}
-.hprojtxtb{
-    width: 500px;
-    margin-bottom: 40px;
-    display: flex;
-    display: -webkit-flex;
-    flex-direction: column;
-    -webkit-flex-direction: column;
-}
-.hprojtitl{
-    font-family: poppins;
-    font-weight: 600;
-    font-size: 44px;
-    margin-bottom: 30px;
-}
-.hprojtxt{
-    font-family: poppins;
-    font-size: 20px;
-}
-.mprojtxtb{
-    width: 300px;
-    display: flex;
-    display: -webkit-flex;
-    flex-direction: column;
-    -webkit-flex-direction: column;
-}
-.mprojtitl{
-    font-family: poppins;
-    font-weight: 600;
-    font-size: 30px;
-    margin-bottom: 10px;
-}
-.mprojtxt{
-    font-size: 14px;
-    margin-bottom: 20px;
-}
-.mprojstxt{
-    font-size: 12px;
-    margin-bottom: 40px;
-}
-.msprojtitl{
-    font-family: poppins;
-    font-size: 20px;
-    margin-bottom: 20px;
-}
-.proj_tplaygrnd{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    display: -webkit-flex;
-    -webkit-flex-direction: row;
-    -webkit-flex-wrap: wrap;
-    
-}
-.proj_tbox{
-    margin: 20px;
-    display: flex;
-    flex-direction: column;
-    display: -webkit-flex;
-    -webkit-flex-direction: column;
-}
-.proj_timg{
-    height: 200px;
-    width: 200px;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-.proj_ttitl{
-    font-family: poppins;
-    font-size: 18px;
-    font-weight: 600;
-    color: rgb(251,118,96);
-    margin-bottom: 6px;
-}
-.proj_ttxt{
-    font-size: 10px;
 }
 mh{
     width: 1200px;
@@ -233,6 +138,7 @@ mh{
     color: rgb(251,118,96);
     font-weight: 400;
     margin-left: 10px;
+    cursor: default;
     -webkit-transition: all 0.2s ease;
     -moz-transition: all 0.2s ease;
     -o-transition: all 0.2s ease;
@@ -249,6 +155,145 @@ mh{
 }
 .apv:hover .ap_minus,.apv:active .ap_minus,.apv:focus .ap_minus{
     display: block;
+}
+#proj_cont{
+    width: 1000px;
+    margin-top: 80px;
+    z-index: 10;
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    -webkit-flex-direction: column;
+    box-sizing: border-box;
+}
+.projbox{
+    margin-bottom: 40px;
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    -webkit-flex-direction: column; 
+}
+.hprojtxtb{
+    width: 500px;
+    margin-bottom: 40px;
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    -webkit-flex-direction: column;
+}
+.hprojtitl{
+    font-family: poppins;
+    font-weight: 600;
+    font-size: 44px;
+    margin-bottom: 30px;
+}
+.hprojtxt{
+    font-family: poppins;
+    font-size: 20px;
+}
+.mprojtxtb{
+    width: 300px;
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    -webkit-flex-direction: column;
+}
+.mprojtitl{
+    font-family: poppins;
+    font-weight: 600;
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+.mprojtxt{
+    font-size: 14px;
+    margin-bottom: 20px;
+}
+.mprojstxt{
+    font-size: 12px;
+    margin-bottom: 40px;
+}
+.msprojtitl{
+    font-family: poppins;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.proj_tplaygrnd{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+
+}
+.proj_tfence1a,.proj_tfence1c,.proj_tfence2a, .proj_tfence2c{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+    -webkit-flex-wrap: wrap;
+}
+.proj_tfence1a{
+    width: 470px;
+    margin-bottom: 100px;
+    justify-content: flex-end;
+    -webkit-justify-content: flex-end;
+}
+.proj_tfence1c{
+    margin-left: 340px;
+    justify-content: flex-end;
+    -webkit-justify-content: flex-end;
+}
+.proj_tfence2c{
+    margin-bottom: 200px;
+}
+.proj_tfence1b, .proj_tfence2b, .proj_tfence2d{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+    -webkit-flex-wrap: wrap;
+}
+.proj_tfence1b{
+    height: 360px;
+    margin-left: 270px;
+    justify-content: flex-end;
+    -webkit-justify-content: flex-end;
+}
+.proj_tfence2d{
+    margin-top: 100px;
+}
+.proj_tbox{
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    display: -webkit-flex;
+    -webkit-flex-direction: column;
+}
+.proj_timg1,.proj_timg2{
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.proj_timg1{
+    height: 160px;
+    width: 160px;
+}
+.proj_timg2{
+    height: 220px;
+    width: 220px;
+}
+.proj_ttitl{
+    font-family: poppins;
+    font-size: 18px;
+    font-weight: 600;
+    color: rgb(251,118,96);
+    margin-bottom: 6px;
+}
+.proj_ttxt{
+    font-size: 10px;
 }
 /*.ap{
     font-size: 30px;
