--- a/css/expo.css
+++ b/css/expo.css
@@ -96,6 +96,7 @@ nav{
     width: 300px;
     height: 300px;
     overflow: hidden;
+    position: relative;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -124,6 +125,8 @@ nav{
     font-size: 20px;
     color: rgb(30,30,30);
     position: absolute;
+    display: flex;
+    display: -webkit-flex;
      -webkit-transition: all 0.2s ease;
     -moz-transition: all 0.2s ease;
     -o-transition: all 0.2s ease;
