--- a/css/expo.css
+++ b/css/expo.css
@@ -114,10 +114,10 @@ nav{
     background-repeat: no-repeat;
     background-position: center;
     -webkit-filter: blur(4px);
-    -webkit-transition: filter 0.2s ease;
-    -moz-transition: filter 0.2s ease;
-    -o-transition: filter 0.2s ease;
-    transition: filter 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease;
 }
 .expo_chotxt{
     font-weight: 600;
@@ -125,6 +125,7 @@ nav{
     font-size: 20px;
     color: rgb(30,30,30);
     position: absolute;
+    z-index: 5;
     display: flex;
     display: -webkit-flex;
      -webkit-transition: all 0.2s ease;
