--- a/css/expo.css
+++ b/css/expo.css
@@ -110,6 +110,7 @@ nav{
     width: 300px;
     height: 300px;
     filter: blur(4px);
+    position: relative;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -125,7 +126,7 @@ nav{
     font-size: 20px;
     color: rgb(30,30,30);
     position: absolute;
-    z-index: 30;
+    z-index: 20;
     display: flex;
     display: -webkit-flex;
      -webkit-transition: all 0.2s ease;
