--- a/css/expo.css
+++ b/css/expo.css
@@ -110,8 +110,6 @@ nav{
     width: 300px;
     height: 300px;
     filter: blur(4px);
-    position: relative;
-    z-index: 10;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -127,7 +125,10 @@ nav{
     font-size: 20px;
     color: rgb(30,30,30);
     position: absolute;
-    z-index: 20;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
     display: flex;
     display: -webkit-flex;
      -webkit-transition: all 0.2s ease;
