--- a/css/expo.css
+++ b/css/expo.css
@@ -125,8 +125,8 @@ nav{
     font-size: 20px;
     color: rgb(30,30,30);
     position: absolute;
-    left: 0;
-    top: 0;
+    left: 50%;
+    top: 50%;
     display: flex;
     display: -webkit-flex;
      -webkit-transition: all 0.2s ease;
